@@ -1,3 +1,9 @@
+2003-09-29  Nick Garnett  <nickg@balti.calivar.com>
+
+	* src/pci.c (cyg_pci_get_device_info): Removed check for inactive
+	BARs since the requirement for the BARs to be contiguous has been
+	relaxed in more recent versions of the PCI standard.
+
 2003-08-08  Gary Thomas  <gary@mind.be>
 
 	* include/pci.h: Add CYGARC_PCI_DMA_ADDRESS() macro - used to
